# sysadmin-ai-next

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  README.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md
policies/: sysadmin.rego  sysadmin_ai.rego
src/sysadmin_ai/: __init__.py  cli.py  core.py
src/sysadmin_ai/cost/: __init__.py  tracker.py
src/sysadmin_ai/playbooks/: __init__.py  generator.py
src/sysadmin_ai/plugins/: __init__.py  base.py  builtin.py  manager.py
src/sysadmin_ai/policy/: __init__.py  engine.py  rego.py
src/sysadmin_ai/recovery/: __init__.py  fuzzy.py  recovery.py
src/sysadmin_ai/sandbox/: __init__.py  isolation.py  manager.py
tests/: test_cost.py  test_playbooks.py  test_policy.py  test_recovery.py  test_sandbox.py
