[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysadmin-ai-next"
version = "0.1.0"
description = "Advanced AI-powered system administration assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "SysAdmin AI Team"}
]
keywords = ["sysadmin", "ai", "automation", "security", "opa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.25",
    "thefuzz>=0.20",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "responses>=0.24",
]
opa = [
    "opa-python-client>=1.0",
]

[project.scripts]
sysadmin-ai = "sysadmin_ai.cli:main"

[project.entry-points."sysadmin_ai.plugins"]
# Plugin entry points registered here

[tool.hatch.build.targets.wheel]
packages = ["src/sysadmin_ai"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=sysadmin_ai --cov-report=term-missing"
